[package]
name = "tester"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = {version = "4", features = ["derive"]}
chrono = {version = "0.4", default-features = false, features = ["clock"]}
the-protocol = { version = "0.1.0", path = "../the-protocol", features = ["host"] }
the-protocol-serde = { version = "0.1.0", path = "../the-protocol-serde" }
serial2 = "0.2.33"
